stuck in media queries, I can't locate the issue

--- a/src/styles/normalMode.css
+++ b/src/styles/normalMode.css
@@ -66,6 +66,9 @@
   width: 3.5vw;
   height: 3.5vw;
   cursor: pointer;
+  margin-left: 0px;
+  margin-right: 0px;
+  padding: 0;
 }
 .grid-tile.selected {
   background-color: rgba(255, 3, 3, 0.55);
@@ -73,12 +76,15 @@
   border-width: 1px;
 }
 .grid-box1 {
-  margin-right: 5px;
-  margin-top: -2px;
+  margin-right: 9px;
+  margin-top: -1vh;
+  margin-bottom: 0vh;
 }
 .grid-box2 {
-  margin-left: 5px;
-  margin-top: -2px;
+  margin-right: 0px;
+  margin-left: 0px;
+  margin-top: -1vh;
+  margin-bottom: 0vh;
 }
 .grid-container {
   position: absolute;
@@ -91,7 +97,7 @@
   align-items: center;
 }
 .grid-row {
-  margin-bottom: -3px;
+  margin-bottom: -0.9vh;
 }
 
 @keyframes badgespin {
@@ -128,13 +134,14 @@
   /* Adjust this value as needed */
   z-index: 1;
 }
+/* @media only screen and (orientation: landscape) {
+  .grid-row {
+    margin-bottom: -1.5vh;
+  }
+} */
 
 /* Media query for smartphones */
 @media only screen and (max-width: 600px) {
-  /* .badgespinner {
-    margin-top: -80%;
-    margin-bottom: 55%;
-  } */
   .badge-h1 {
     margin-top: -70%;
   }
@@ -144,7 +151,7 @@
   }
   .grid-box1 {
     margin-right: 0px;
-    margin-top: 9px;
+    margin-top: 5px;
   }
   .grid-box2 {
     margin-left: 0px;
@@ -156,8 +163,8 @@
     min-height: 3.5vh;
   }
   .picture-frame {
-    flex-direction: column; /* Stack items vertically */
-    align-items: center; /* Center items horizontally */
+    flex-direction: column;
+    align-items: center;
   }
   .img1 {
     border-width: 10px 10px 5px 10px;
@@ -172,7 +179,7 @@
     max-height: 35vh;
   }
   .grid-row {
-    margin-bottom: -0.4vh;
+    margin-bottom: -0.88vh;
   }
   .footer {
     font-size: 7vw;
@@ -183,7 +190,7 @@
     margin-top: -80%;
   }
   .grid-row {
-    margin-bottom: -0.35vh;
+    margin-bottom: -0.75vh;
   }
   .next-button {
     margin-top: 5px;
@@ -194,11 +201,14 @@
     margin-top: -90%;
   }
   .grid-row {
-    margin-bottom: -0.4vh;
+    margin-bottom: -0.5vh;
   }
 }
 @media only screen and (max-width: 376px) {
   .grid-row {
-    margin-bottom: -0.45vh;
+    margin-bottom: -6.8px;
+  }
+  .grid-box2 {
+    margin-bottom: 1.7vh;
   }
 }
